# pyroclastic

./: COMPUTATIONS.md  LICENSE  README.md  pyproject.toml
examples/: csidhlike460.groupstruct  csidhlike460.md  csidhlike480.md  csidhlike512.groupstruct  csidhlike512.md  fast384.md  fast384_gen.py  fast512.md  fast512_gen.py  pegasis509.groupstruct  pegasis509.md
pyroclastic/: __init__.py  __main__.py  algebra.py  arith.comp  gpu.py  groupstruct.py  linalg.py  linalg_alt.py  lingen.py  lingen_gf2.py  matrepair.py  pyroclastic_flint_extras.pyx  relations.py  sieve.py  siqs.comp  siqs2a_reset.comp  siqs2b_roots.comp  siqs2c_sort.comp  siqs2e_buckets.comp  siqs2f_sieve.comp  siqs_common.h  siqs_prepare.comp  smoothrel.py  spmv.comp  spmv_bigint.comp  spmv_blockcoo.comp  spmv_blockcoo2.comp  spmv_blockcoo3.comp  spmv_csr_medium.comp  spmv_gf2.comp  spmv_gf2_transpose1.comp  spmv_multi.comp  spmv_small.comp  test_spmv.py
pyroclastic/factor/: __main__.py  linalg.py  relations.py  sieve.py
pyroclastic/tests/: test_algebra.py  test_groupstruct.py  test_siqs.py  test_siqs2.py  test_spmv.py
